Bug 386940 - Error message when connecting to lambda
Summary: Error message when connecting to lambda
Status: RESOLVED FIXED
Alias: None
Product: clazy
Classification: Developer tools
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other All
: NOR minor
Target Milestone: ---
Assignee: Sergio Martins
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-11-15 09:16 UTC by Richard
Modified: 2017-11-15 16:36 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Richard 2017-11-15 09:16:04 UTC
A connect to a lambda issues an error message in the const-signal-or-slot checker message:
error, invalid argIndex 3 number of arguments 3

code snippet:
QObject::connect(&o, &MyObject::signal1, []{});
Comment 1 Sergio Martins 2017-11-15 16:36:36 UTC
commit ad1efd24b4183e093247a6b788f9cc9e2c79e403
Author: Sergio Martins <iamsergio@gmail.com>
Date:   Wed Nov 15 16:28:38 2017 +0000

    const-signal-or-slot: Don't print an error when connecting to lambda
    
    returning nullptr is enough
    
    BUG: 386940