const-signal-or-slot: Don't print an error when connecting to lambda

returning nullptr is enough

BUG: 386940